--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.2.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -65,6 +66,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-swipeable-views-react-18-fix": "^0.14.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
@@ -75,6 +77,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36"
+    "@types/axios": "^0.9.36",
+    "@types/react-swipeable-views": "^0.13.6"
   }
 }
